--- a/userdata.cfg
+++ b/userdata.cfg
@@ -1,5 +1,5 @@
 {
-	"name": "Jerry" {
+	"Jerry": {
         "car": "car_black_small_5.png",
         "last_save": "2020-01-28 20:00",
         "input": {
@@ -8,7 +8,7 @@
             "brake": "key_down",
             "left": "key_left",
             "right": "key_right"
-        }
+        },
         "trackdata": {
             "track01": {
                 "best_lap": 9999.0,
@@ -22,5 +22,4 @@
             }
         }
     }
-    
 }
