--- a/maps/drifters-map01.cfg
+++ b/maps/drifters-map01.cfg
@@ -13,5 +13,10 @@
 	"check_height": 21,
 	"car_pos_x": 550,
 	"car_pos_y": 3120,
-	"car_rot": 0
+	"car_rot": 0,
+	"best_laps": [
+		{ "pos": 1, "name": "Jerry", "time": "55:000" },
+		{ "pos": 2, "name": "Maja", "time": "56:300" },
+		{ "pos": 3, "name": "Louie", "time": "57:500" },
+	]
 }
